--- a/app_weather.yaml
+++ b/app_weather.yaml
@@ -3,11 +3,13 @@ api_version: 1
 threadsafe: true
 
 handlers:
-- url: /assets/css/styles
-  static_dir: styles
+#
+- url: /scripts
+  static_dir: javascript
 
-- url: /assets/js
-  static_dir: js
+- url: /styles
+  static_dir: css
+
 
 - url: /.*
   script: weather.app
